infra/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodapp-client-depl
spec:
  replicas : 1
  selector:
    matchLabels:
      app : foodapp-client-pod
  template:
    metadata:
      labels:
        app: foodapp-client-pod
    spec:
      containers:
        - name: foodapp-client-container
          image: srp254/foodapp-app-client-image
          imagePullPolicy: Never
---
apiVersion : v1
kind : Service
metadata: 
  name: foodapp-client-srv
spec:
  type: ClusterIP
  selector:
    app : foodapp-client-pod
  ports:
    - name: foodapp-client-port
      protocol: TCP
      port: 3000
      targetPort: 3000
