infra/notification-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodapp-notif-depl
spec:
  replicas : 1
  selector:
    matchLabels:
      app : foodapp-notif-pod
  template:
    metadata:
      labels:
        app: foodapp-notif-pod
    spec:
      containers:
        - name: foodapp-notif-container
          image: srp254/foodapp-app-notif-image
          imagePullPolicy: Never
---
apiVersion : v1
kind : Service
metadata: 
  name: foodapp-notif-srv
spec:
  type: ClusterIP
  selector:
    app : foodapp-notif-pod
  ports:
    - name: foodapp-notif-port
      protocol: TCP
      port: 4006
      targetPort: 4006
